--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "jspm": "^0.15.3"
+    "chai": "^1.10.0",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^0.1.7",
+    "karma-jspm": "^1.1.1",
+    "karma-mocha": "^0.1.10",
+    "karma-mocha-reporter": "^0.2.2",
+    "karma-sauce-launcher": "^0.2.10",
+    "mocha": "^2.1.0"
   },
   "jspm": {
     "directories": {},
