--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "browser-sync start --server --files **/*",
-    "bundle": "jspm bundle-sfx main bundle/main.js --minify",
+    "bundle": "jspm bundle-sfx app/main bundle/main.js --minify",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
